Refatorando funções antigas, adcionando eventListeners em vez de funções onclick

--- a/index.html
+++ b/index.html
@@ -25,26 +25,26 @@
         <p>Sua comida em 6 minutos</p>
       </div>
     </header>
-    <main class="conteudo-app" onclick="botao_finalizar()">
+    <main class="conteudo-app">
       <div class="titulo-comida">
         <h1>Primeiro, seu prato</h1>
       </div>
       <section class="conteudo-prato-principal">
-        <div class="pratos" onclick="evento_click(this)">
+        <div class="pratos">
           <img src="assets/frango_yin_yang 1.png" alt="" />
           <h3 class="titulo-prato">Frango Yin Yang</h3>
           <p class="descricao-prato">Um pouco de batata, um pouco de salada</p>
           <p class="preco-prato">R$ 20,90</p>
           <ion-icon name="checkmark-circle"></ion-icon>
         </div>
-        <div class="pratos" onclick="evento_click(this)">
+        <div class="pratos" >
           <img src="assets/tacos.png" alt="" />
           <h3 class="titulo-prato">Tacos</h3>
           <p class="descricao-prato">Explosão de sabores, 2 unidades</p>
           <p class="preco-prato">R$ 25,90</p>
           <ion-icon name="checkmark-circle"></ion-icon>
         </div>
-        <div class="pratos" onclick="evento_click(this)">
+        <div class="pratos">
           <img src="assets/hamburguer.png" alt="" />
           <h3 class="titulo-prato">Hamburgasso</h3>
           <p class="descricao-prato">Do usa para a tua table</p>
