Adcionando mais events listeners, foi trocado no ultimo commit o padrao snake_case pelo camelCase

--- a/index.html
+++ b/index.html
@@ -55,21 +55,21 @@
       <div class="titulo-comida">
         <h1>Agora, sua bebida</h1>
       <section class="conteudo-prato-bebida">
-        <div class="pratos" onclick="evento_click_bebida(this)">
+        <div class="pratos" >
           <img src="assets/coquinha_gelada 1.png" alt="" />
           <h3 class="titulo-prato">Coca geladíssima</h3>
           <p class="descricao-prato">Refresco que mata como nenhum</p>
           <p class="preco-prato">R$ 5,90</p>
           <ion-icon name="checkmark-circle"></ion-icon>
         </div>
-        <div class="pratos" onclick="evento_click_bebida(this)">
+        <div class="pratos" >
           <img src="assets/guarana.png" alt="" />
           <h3 class="titulo-prato">Guaraná Antartica</h3>
           <p class="descricao-prato">Uma delicinha</p>
           <p class="preco-prato">R$ 4,90</p>
           <ion-icon name="checkmark-circle"></ion-icon>
         </div>
-        <div class="pratos" onclick="evento_click_bebida(this)">
+        <div class="pratos" >
           <img src="assets/agua.png" alt="" />
           <h3 class="titulo-prato">Agua com gás</h3>
           <p class="descricao-prato">Verdadeiro creme de la creme das bebidas</p>
@@ -81,21 +81,21 @@
         <h1>Por fim, sua sobremesa</h1>
       </div>
       <section class="conteudo-prato-sobremesa">
-        <div class="pratos" onclick="evento_click_sobremesa(this)">
+        <div class="pratos" >
           <img src="assets/pudim 1.png" alt="" />
           <h3 class="titulo-prato">Pudimzao</h3>
           <p class="descricao-prato">Cremoso e vai te deixar feliz</p>
           <p class="preco-prato">R$ 8,90</p>
           <ion-icon name="checkmark-circle"></ion-icon>
         </div>
-        <div class="pratos" onclick="evento_click_sobremesa(this)">
+        <div class="pratos" >
           <img src="assets/bolo.png" alt="" />
           <h3 class="titulo-prato">Bolão De chocs</h3>
           <p class="descricao-prato">Porque pedir um se tu pode pedir dois!</p>
           <p class="preco-prato">R$ 7,90</p>
           <ion-icon name="checkmark-circle"></ion-icon>
         </div>
-        <div class="pratos" onclick="evento_click_sobremesa(this)">
+        <div class="pratos" >
           <img src="assets/sorvete.png" alt="" />
           <h3 class="titulo-prato">Sorvetin</h3>
           <p class="descricao-prato">No calor, seu melhor companheiro!</p>
@@ -106,7 +106,7 @@
       
     </main>
     <section class="finalizar-pedido">
-          <a href="#"></a><button onclick="mandar_mensagem()" disabled><p>Selecione os 3 itens para fechar o pedido</p></button>
+          <a href="#"></a><button disabled><p>Selecione os 3 itens para fechar o pedido</p></button>
     </section>
     <script src="myjs.js"></script>
     
